fixed height scale of color picker layout square to be rectangle on mobile

--- a/frontend/src/css/EditorPageCSS/EditorLeftToolBar.css
+++ b/frontend/src/css/EditorPageCSS/EditorLeftToolBar.css
@@ -132,4 +132,8 @@
     --left-toolbar-size: 3em;
   }
 
+  .left-toolbar .toolbar-square {
+    height: calc(var(--left-toolbar-size) * 4);
+  }
+
 }
